# RandomPatches

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: multi-platform.yml
src/: background-on-unfocus.cpp  custom-percent-decimal.cpp  optimized-grid.cpp  patch.hpp
src/portable/: dash-particles-offset-fix.cpp  flipped-particles-fix.cpp  global-ship-drag-particles.cpp  icon-explosion-without-explosion.cpp  logarithmic-volume-sliders.cpp  options-keybind.cpp  practice-music-sync-pulse-fix.cpp  robot-spider-extra-parenting-fix.cpp  show-trigger-wave-particles-fix.cpp  swing-default-mini-icon-fix.cpp  wave-trail-on-death.cpp
